[package]
name = "bc-crypto"
version = "0.6.0"
edition = "2021"
description = "A uniform API for cryptographic primitives used in Blockchain Commons projects"
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-crypto-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-crypto"
keywords = ["cryptography"] # Up to five
categories = ["cryptography"] # https://crates.io/category_slugs

[dependencies]
bc-rand = "^0.2.0"
rand = "^0.8.5"
sha2 = "^0.10.6"
hmac = "^0.12.1"
pbkdf2 = "^0.12.1"
hkdf = "^0.12.3"
crc32fast = "^1.3.2"
chacha20poly1305 = "^0.10.1"
secp256k1 = "^0.30.0"
x25519-dalek = {version = "2.0.0-rc.2", features = ["static_secrets"]}
thiserror = "^1.0.48"
anyhow = "^1.0.0"
hex = "^0.4.3"
ed25519-dalek = {version = "2.1.1", features = ["rand_core"]}

[dev-dependencies]
hex-literal = "^0.4.1"
hex = "^0.4.3"
version-sync = "^0.9"
