[package]
name = "bc-crypto"
version = "0.11.0"
edition = "2024"
description = "A uniform API for cryptographic primitives used in Blockchain Commons projects"
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-crypto-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-crypto"
keywords = ["cryptography"]                                                                    # Up to five
categories = ["cryptography"]                                                                  # https://crates.io/category_slugs

[dependencies]
bc-rand = { git = "https://github.com/willrnch/bc-rand-rust.git", rev = "4013ca45388a9bc1c8ca822ba09b551886857e31" }
rand = "^0.9.2"
sha2 = "0.11.0-rc.2"
hmac = "0.13.0-rc.1"
pbkdf2 = "0.13.0-rc.1"
hkdf = "0.13.0-rc.1"
crc32fast = "^1.3.2"
chacha20poly1305 = "0.11.0-rc.1"
secp256k1 = "^0.30.0"
x25519-dalek = { version = "3.0.0-pre.1", features = ["static_secrets"] }
thiserror = "^2.0"
hex = "^0.4.3"
ed25519-dalek = { version = "3.0.0-pre.1", features = ["rand_core"] }
scrypt = { version = "0.11.0", default-features = false }
argon2 = "0.6.0-rc.1"

[dev-dependencies]
hex-literal = "^1.0.0"
hex = "^0.4.3"
version-sync = "^0.9"
