[package]
name = "bc-crypto"
version = "0.14.0"
edition = "2024"
description = "A uniform API for cryptographic primitives used in Blockchain Commons projects"
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-crypto-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-crypto"
keywords = ["cryptography"]                                                                    # Up to five
categories = ["cryptography"]                                                                  # https://crates.io/category_slugs

[features]
default = ["secp256k1", "ed25519"]
secp256k1 = ["dep:secp256k1"]
ed25519 = ["dep:ed25519-dalek"]

[dependencies]
bc-rand = "^0.5.0"
rand = "^0.9.2"
sha2 = "^0.10.6"
hmac = "^0.12.1"
pbkdf2 = "^0.12.1"
hkdf = "^0.12.3"
crc32fast = "^1.3.2"
chacha20poly1305 = "^0.10.1"
secp256k1 = { version = "^0.31.1", optional = true }
x25519-dalek = { version = "2.0.0-rc.2", features = ["static_secrets"] }
thiserror = "^2.0"
hex = "^0.4.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"], optional = true }
scrypt = { version = "0.11.0", default-features = false }
argon2 = "0.5.3"

[dev-dependencies]
hex-literal = "^1.1.0"
hex = "^0.4.3"
version-sync = "^0.9"
